class Domino:
    def __init__(self, gauche : int, droite : int):
        self.gauche = gauche
        self.droite = droite
